--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/aboutme.jpg" alt="" /></span>
         <p>
-            Hi, I'm ROOPESH H S, an AI Engineer with a deep passion for Machine Learning, Deep Learning, Natural Language Processing and Generative AI. I have over two years of experience in technical support, which has helped me build a strong foundation in problem-solving and debugging. 
+            Hi, I'm ROOPESH H s, an AI Engineer with a deep passion for Machine Learning, Deep Learning, Natural Language Processing and Generative AI. I have over two years of experience in technical support, which has helped me build a strong foundation in problem-solving and debugging. 
         </p>
         <p>
             My journey in AI started as I began learning Python and gradually moved into data science and AI modeling. I have worked on a variety of projects, ranging from GenAI-based chatbots to recommendation systems and document processing using cutting-edge models like GPT,  and custom-built AI systems.
